class User:
    def __init__(self, user_id, name):
        self.id = user_id
        self.name = name
        self.loans = []
